--- a/.gitignore
+++ b/.gitignore
@@ -135,6 +135,6 @@ build_1/
 build_2/
 build_console_1/
 build_console_2/
-build_console_3/
-build_console_4/
+build_1-v0.3.2-console/
+build_2-v0.3.2/
 demo/
